Implemented tags for post. Designed toolbar, footer and index page for frontend

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
+@import "./variables";
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~sweetalert2/dist/sweetalert2.min.css";
-
-@import './variables'
+@import "~vuetify/dist/vuetify.min.css";
+@import "~material-design-icons-iconfont/dist/material-design-icons.css";
