Adding register and login views

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,9 @@
-doctype html
+doctype(html)
 html(lang='en')
 	head
-		title Vue Express API
-		script(src='/javascripts/app.js' defer)
+		title iHub... The home of the next great idea
+		meta(charset="UTF-8")
 		link(rel='stylesheet', href='/stylesheets/app.css')
+		script(src='/javascripts/app.js' defer)
 	body
 		block content
