Fixed tag-comma bug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,8 @@ html(lang='en')
 	head
 		title iHub... The home of the next great idea
 		meta(charset="UTF-8")
+		//meta(http-equiv="X-UA-Compatible", content="ie=edge")
+		//meta(name="viewport", content="width=device-width,initial-scale=1.0")
 		link(rel='stylesheet', href='/stylesheets/app.css')
 		script(src='/javascripts/app.js' defer)
 	body
